Alignment fix

--- a/src/app/shared/components/side-nav/side-nav.component.scss
+++ b/src/app/shared/components/side-nav/side-nav.component.scss
@@ -25,7 +25,7 @@
         font-weight: 900;
         cursor: pointer;
         border: none;
-        color: var(--font-primary-color);
+        color: var(--primary);
       }
   
       .logo-txt {
@@ -112,4 +112,7 @@
     .sidenav-link-text {
       color: #000000;
     }
+  }
+  .menu-toggle{
+    fill: #fff;
   }
